--- a/lib/tasks/litvault/custom_attributes/transactable_types.yml
+++ b/lib/tasks/litvault/custom_attributes/transactable_types.yml
@@ -41,30 +41,37 @@
     required: true
 
   principal_office:
-    label: Princial
+    label: Principal Office
     required: true
 
-  fee_agreement:
+  engagement_agreement_exists:
     label: 'Does a signed, written contingent fee agreement (the "Engagement Agreement") exist between Client and Referring Law Firm?'
     html_tag: radio_buttons
     valid_values:
       - "Yes"
       - "No"
 
-  date_engagement_signed:
+  date_engagement_agreement_signed:
     label: 'Date Engagement Signed'
     attribute_type: date
 
-  attorneys_fee_percentage:
+  engagement_agreement_fee_percentage:
     label: 'What is the attorneys’ fee percentage contained in the Engagement Agreement?'
     attribute_type: array
+
+  engagement_agreement_expenses_advancement:
+    label: 'Are attorneys obligated to advance all litigation expenses per the Client Engagement?'
+    html_tag: radio_buttons
+    valid_values:
+      - "Yes"
+      - "No"
 
   client_name:
     label: 'Enter Client First Name and Last Name'
     required: true
 
   client_dob:
-    label: 'Clien’s Date of Birth'
+    label: 'Client’s Date of Birth'
     attribute_type: date
     required: true
 
@@ -128,6 +135,13 @@
     attribute_type: date
     required: true
 
+  states:
+    label: Select state(s) in which lawyer(s) at Handling Law Firm must be licensed to handle case
+    html_tag: check_box_list
+    valid_values: ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'District of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana', 'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota', 'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire', 'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming']
+    required: true
+    searchable: true
+
   city_in_which_law_firm_must_be_located:
     label: 'State the city or cities in which lawyer(s) at Handling Law Firm should be located in to handle case'
     html_tag: textarea
@@ -188,12 +202,5 @@
     html_tag: textarea
     required: true
     max_length: 30000
-
-  states:
-    label: Select state(s) in which lawyer(s) at Handling Law Firm must be licensed to handle case
-    html_tag: check_box_list
-    valid_values: ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'District of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana', 'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota', 'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire', 'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming']
-    required: true
-    searchable: true
 
 
