--- a/lib/tasks/litvault/categories/transactable_types.yml
+++ b/lib/tasks/litvault/categories/transactable_types.yml
@@ -1,6 +1,7 @@
 "Group Case":
   "Group Case Categories":
     mandatory: true
+    assign_to_buyer_profile: true
     children:
       - name: 'Pharmaceutical'
         children:
@@ -20,6 +21,7 @@
 "Individual Case":
   "Individual Case Categories":
     mandatory: true
+    assign_to_buyer_profile: true
     children:
       - name: 'Individual Injury'
         children:
