--- a/lib/tasks/litvault/custom_attributes/instance_profile_types.yml
+++ b/lib/tasks/litvault/custom_attributes/instance_profile_types.yml
@@ -13,3 +13,11 @@
   bio:
     label: "Bio"
     html_tag: textarea
+  states:
+    label: Select state(s) in which you are licensed to handle cases
+    attribute_type: array
+    html_tag: check_box_list
+    valid_values: ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'District of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana', 'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota', 'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire', 'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming']
+    required: true
+    searchable: true
+    wrapper_html_options_string: 'class=>form-group check_boxes required checkbox-columns'
