NM-5929 add validation to schedule exception rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
 Documentation:
   Enabled: false
-Metrics/LineLength:
-  Enabled: false
+AllCops:
+  Exclude:
+    - db/schema.rb
+  RunRailsCops: true
