--- a/lib/tasks/litvault/custom_attributes/instance_profile_types.yml
+++ b/lib/tasks/litvault/custom_attributes/instance_profile_types.yml
@@ -1,9 +1,15 @@
 ---
-# seller profile
-579: ~
-
-# buyer profile
-580:
+# default profile
+578:
+  bar_id:
+    label: 'BAR ID'
+  company_phone:
+    label: 'Law Firm Phone Number'
+  company_website_address:
+    label: 'Law Firm Website Address'
+  company_about:
+    label: 'About Law Firm'
+    html_tag: 'textarea'
   linkedin_url:
     label: "LinkedIn URL"
   googleplus_url:
@@ -22,3 +28,61 @@
     validation_only_on_update: true
     searchable: true
     wrapper_html_options_string: 'class=>form-group check_boxes required checkbox-columns'
+  honors_awards:
+    label: 'Honors / Awards'
+    attribute_type: array
+    html_tag: 'select'
+    valid_values: ['Award 1', 'Award 2', 'Award 3']
+  number_of_cases_referred_in_the_past:
+    label: 'Number of cases referred in the past'
+    html_tag: 'textarea'
+  professional_liability_insurance:
+    label: 'I acknowledge and confirm that professional liability insurance is in place.'
+    attribute_type: boolean
+    html_tag: check_box
+    required: true
+    validation_only_on_update: true
+  liability_occurence_limits_information:
+    label: Liability Occurence / Limits Information
+    attribute_type: boolean
+    html_tag: check_box
+    required: true
+    validation_only_on_update: true
+  no_limitations_agreement:
+    label: 'I acknowledge and confirm all of the following: that I am in good standing with in the states where I practice law, have no past or pending grievances and attorney discipline, have no past or pending legal Malpractice Claims.'
+    attribute_type: boolean
+    html_tag: check_box
+    required: true
+    validation_only_on_update: true
+
+# seller profile
+579: ~
+
+# buyer profile
+580:
+  board_certification:
+    label: 'Board Cerification'
+    html_tag: radio_buttons
+    valid_values:
+      - "Yes"
+      - "No"
+    wrapper_html_options_string: 'class=>form-group radio_buttons always-inline'
+
+  number_of_jury_trials:
+    label: 'Number of Jury Trials (in general and for specific case types)'
+    html_tag: 'textarea'
+
+  total_settlements:
+    label: 'Total Settlements (in general and for specific case types)'
+    html_tag: 'textarea'
+
+  average_settlements:
+    label: 'Average Settlements (in general and for specific case types)'
+    html_tag: 'textarea'
+
+  experience_for_tier_1_case_sub_classification:
+    label: 'Experience for Tier 1 Case Sub Classification'
+    html_tag: 'textarea'
+
+
+
