--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desksnearme",
-  "version": "10.8.0-67",
+  "version": "10.8.0-68",
   "description": "All documentation is set out on the [GitHub Wiki](https://near-me.atlassian.net/wiki/).",
   "private": true,
   "directories": {},
@@ -26,6 +26,7 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
     "css-loader": "^0.23.1",
+    "customizr": "^1.0.0-alpha",
     "del": "^2.2.0",
     "eslint": "^3.3.1",
     "eslint-plugin-react": "^6.1.2",
