--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desksnearme",
-  "version": "10.9.1-169",
+  "version": "10.9.1-171",
   "description": "All documentation is set out on the [GitHub Wiki](https://near-me.atlassian.net/wiki/).",
   "private": true,
   "directories": {},
@@ -54,6 +54,7 @@
     "imports-loader": "^0.6.5",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "node-sass": "^3.4.2",
     "postcss": "^5.1.2",
     "style-loader": "^0.13.1",
